{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 93,
  "lineage": "418cec6c-26b7-01b6-877d-71ad4ccdcd53",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0bfe3e9d7b1cd48",
            "association_id": "eipassoc-03cdc9c60224ee478",
            "domain": "vpc",
            "id": "eipalloc-0f0bfe3e9d7b1cd48",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0faa0fd7136728f73",
            "private_dns": "ip-172-17-61-116.ap-south-1.compute.internal",
            "private_ip": "172.17.61.116",
            "public_dns": "ec2-3-6-135-204.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.135.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Ajio-nat-eip",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-nat-eip",
              "project": "Ajio"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591825527445:internet-gateway/igw-0cac5b2284859520a",
            "id": "igw-0cac5b2284859520a",
            "owner_id": "591825527445",
            "tags": {
              "Name": "Ajio-igw",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-igw",
              "project": "Ajio"
            },
            "vpc_id": "vpc-0bdc73479d61ff4e2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0bfe3e9d7b1cd48",
            "connectivity_type": "public",
            "id": "nat-04ed610506d7cfe7c",
            "network_interface_id": "eni-0faa0fd7136728f73",
            "private_ip": "172.17.61.116",
            "public_ip": "3.6.135.204",
            "subnet_id": "subnet-0c042b36c440c1a4f",
            "tags": {
              "Name": "Ajio-nat",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-nat",
              "project": "Ajio"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591825527445:route-table/rtb-0c94dc52c257cc3f5",
            "id": "rtb-0c94dc52c257cc3f5",
            "owner_id": "591825527445",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04ed610506d7cfe7c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ajio-route-private",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-route-private",
              "project": "Ajio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc73479d61ff4e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591825527445:route-table/rtb-05fa6b9683b553840",
            "id": "rtb-05fa6b9683b553840",
            "owner_id": "591825527445",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cac5b2284859520a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ajio-route-public",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-route-public",
              "project": "Ajio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc73479d61ff4e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0981d35218c3e9c16",
            "route_table_id": "rtb-0c94dc52c257cc3f5",
            "subnet_id": "subnet-04b4eacce758763cb"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az",
            "aws_eip.eip",
            "aws_nat_gateway.nat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caf3f7e6bbaa35dd",
            "route_table_id": "rtb-0c94dc52c257cc3f5",
            "subnet_id": "subnet-0d4801b0a43786553"
          },
          "dependencies": [
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az",
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa3f6674b39083c1",
            "route_table_id": "rtb-0c94dc52c257cc3f5",
            "subnet_id": "subnet-0c79b559ac4733f8d"
          },
          "dependencies": [
            "aws_subnet.private3",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az",
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acc3ce74341bb6f9",
            "route_table_id": "rtb-05fa6b9683b553840",
            "subnet_id": "subnet-04edd3e794f07bb66"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045e6ae6a9f557b11",
            "route_table_id": "rtb-05fa6b9683b553840",
            "subnet_id": "subnet-0c042b36c440c1a4f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d628059fdbaf6bc2",
            "route_table_id": "rtb-05fa6b9683b553840",
            "subnet_id": "subnet-0a259fb5ade4f3e26"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public3",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591825527445:security-group/sg-0d39df7c8e0f76f81",
            "description": "Allows 3306 from frontend,22 from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d39df7c8e0f76f81",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09a0bec90573b779a"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09008b84b4e62d843"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Ajio-backend",
            "name_prefix": "",
            "owner_id": "591825527445",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ajio-backend",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-backend",
              "project": "Ajio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc73479d61ff4e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.frontend",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591825527445:security-group/sg-09a0bec90573b779a",
            "description": "Allows 22 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a0bec90573b779a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Ajio-bastion",
            "name_prefix": "",
            "owner_id": "591825527445",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ajio-bastion",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-bastion",
              "project": "Ajio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc73479d61ff4e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591825527445:security-group/sg-09008b84b4e62d843",
            "description": "Allows 80 from all,22 from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09008b84b4e62d843",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09a0bec90573b779a"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Ajio-frontend",
            "name_prefix": "",
            "owner_id": "591825527445",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ajio-frontend",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-frontend",
              "project": "Ajio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc73479d61ff4e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591825527445:subnet/subnet-04b4eacce758763cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.96.0/19",
            "id": "subnet-04b4eacce758763cb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591825527445",
            "tags": {
              "Name": "Ajio-private1",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-private1",
              "project": "Ajio"
            },
            "vpc_id": "vpc-0bdc73479d61ff4e2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591825527445:subnet/subnet-0d4801b0a43786553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.128.0/19",
            "id": "subnet-0d4801b0a43786553",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591825527445",
            "tags": {
              "Name": "Ajio-private2",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-private2",
              "project": "Ajio"
            },
            "vpc_id": "vpc-0bdc73479d61ff4e2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591825527445:subnet/subnet-0c79b559ac4733f8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.17.160.0/19",
            "id": "subnet-0c79b559ac4733f8d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591825527445",
            "tags": {
              "Name": "Ajio-private3",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-private3",
              "project": "Ajio"
            },
            "vpc_id": "vpc-0bdc73479d61ff4e2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591825527445:subnet/subnet-04edd3e794f07bb66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.0.0/19",
            "id": "subnet-04edd3e794f07bb66",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "591825527445",
            "tags": {
              "Name": "Ajio-public1",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-public1",
              "project": "Ajio"
            },
            "vpc_id": "vpc-0bdc73479d61ff4e2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591825527445:subnet/subnet-0c042b36c440c1a4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.32.0/19",
            "id": "subnet-0c042b36c440c1a4f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "591825527445",
            "tags": {
              "Name": "Ajio-public2",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-public2",
              "project": "Ajio"
            },
            "vpc_id": "vpc-0bdc73479d61ff4e2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591825527445:subnet/subnet-0a259fb5ade4f3e26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.17.64.0/19",
            "id": "subnet-0a259fb5ade4f3e26",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "591825527445",
            "tags": {
              "Name": "Ajio-public3",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-public3",
              "project": "Ajio"
            },
            "vpc_id": "vpc-0bdc73479d61ff4e2"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591825527445:vpc/vpc-0bdc73479d61ff4e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-06d2a12a3c179e82e",
            "default_route_table_id": "rtb-07e931f481b585a37",
            "default_security_group_id": "sg-07ac9e1d7259e860a",
            "dhcp_options_id": "dopt-045fa85dba0be1673",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bdc73479d61ff4e2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07e931f481b585a37",
            "owner_id": "591825527445",
            "tags": {
              "Name": "Ajio-vpc",
              "project": "Ajio"
            },
            "tags_all": {
              "Name": "Ajio-vpc",
              "project": "Ajio"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}